--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
 }
 .container{
     width: 500px;
-    max-width:500px;
+    max-width:100%;
     height: auto ;
     position: absolute;
     left: 50%;
